--- a/Unsupervised_ML/Unsuper_ML_preprocess.ipynb
+++ b/Unsupervised_ML/Unsuper_ML_preprocess.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "b4b9d31e",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "Iris-virginica             50           50            50           50"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "927751dd",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
        "4           5.0          3.6           1.4          0.2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,31 +317,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a4ea1349",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal_length</th>\n",
+       "      <th>petal_length</th>\n",
+       "      <th>sepal_width</th>\n",
+       "      <th>petal_width</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepal_length  petal_length  sepal_width  petal_width\n",
+       "0           5.1           1.4          3.5          0.2\n",
+       "1           4.9           1.4          3.0          0.2\n",
+       "2           4.7           1.3          3.2          0.2\n",
+       "3           4.6           1.5          3.1          0.2\n",
+       "4           5.0           1.4          3.6          0.2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# reorder columns\n",
+    "new_iris_df = new_iris_df[['sepal_length','petal_length','sepal_width','petal_width']]\n",
+    "new_iris_df.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0f83fb0d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45b167a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4e7a699e",
    "metadata": {},
    "outputs": [],
@@ -350,6 +419,14 @@
     "output = \"new_iris_data.csv\"\n",
     "new_iris_df.to_csv(output, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a187e47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
