--- a/Machine_Learning/17-9-3-gradient_boosted_tree/Notebook/gradient_boosted_tree_CH.ipynb
+++ b/Machine_Learning/17-9-3-gradient_boosted_tree/Notebook/gradient_boosted_tree_CH.ipynb
@@ -11,6 +11,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from path import Path\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -48,7 +64,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>1000</td>\n",
        "      <td>30</td>\n",
        "      <td>45</td>\n",
@@ -62,7 +78,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>1000</td>\n",
        "      <td>30</td>\n",
        "      <td>50</td>\n",
@@ -76,7 +92,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>1000</td>\n",
        "      <td>30</td>\n",
        "      <td>33</td>\n",
@@ -90,7 +106,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>1000</td>\n",
        "      <td>15</td>\n",
        "      <td>27</td>\n",
@@ -104,7 +120,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>1000</td>\n",
        "      <td>30</td>\n",
        "      <td>28</td>\n",
@@ -144,14 +160,12 @@
        "4                  1              1            0  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from path import Path\n",
     "# Load data\n",
     "file_path = Path(\"../Resources/loans_data_encoded.csv\")\n",
     "loans_df = pd.read_csv(file_path)\n",
@@ -160,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +212,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>1000</td>\n",
        "      <td>30</td>\n",
        "      <td>45</td>\n",
@@ -211,7 +225,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>1000</td>\n",
        "      <td>30</td>\n",
        "      <td>50</td>\n",
@@ -224,7 +238,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>1000</td>\n",
        "      <td>30</td>\n",
        "      <td>33</td>\n",
@@ -237,7 +251,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>1000</td>\n",
        "      <td>15</td>\n",
        "      <td>27</td>\n",
@@ -250,7 +264,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>1000</td>\n",
        "      <td>30</td>\n",
        "      <td>28</td>\n",
@@ -289,7 +303,7 @@
        "4                  1              1            0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,12 +327,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "# Splitting into Train and Test sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X,\n",
     "                                                    y,\n",
@@ -344,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -352,12 +364,12 @@
      "output_type": "stream",
      "text": [
       "Learning rate:  0.05\n",
-      "Accuracy score (training): 0.627\n",
-      "Accuracy score (validation): 0.520\n",
+      "Accuracy score (training): 0.629\n",
+      "Accuracy score (validation): 0.512\n",
       "\n",
       "Learning rate:  0.1\n",
-      "Accuracy score (training): 0.667\n",
-      "Accuracy score (validation): 0.528\n",
+      "Accuracy score (training): 0.656\n",
+      "Accuracy score (validation): 0.520\n",
       "\n",
       "Learning rate:  0.25\n",
       "Accuracy score (training): 0.723\n",
@@ -372,15 +384,13 @@
       "Accuracy score (validation): 0.520\n",
       "\n",
       "Learning rate:  1\n",
-      "Accuracy score (training): 0.792\n",
-      "Accuracy score (validation): 0.480\n",
+      "Accuracy score (training): 0.805\n",
+      "Accuracy score (validation): 0.512\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "\n",
     "# Create a classifier object\n",
     "learning_rates = [0.05, 0.1, 0.25, 0.5, 0.75, 1]\n",
     "for learning_rate in learning_rates:\n",
@@ -415,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -445,102 +455,102 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5</td>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>13</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>14</td>\n",
+       "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>15</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>16</td>\n",
+       "      <th>6</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>17</td>\n",
+       "      <th>7</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>18</td>\n",
+       "      <th>8</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>19</td>\n",
+       "      <th>9</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -572,7 +582,7 @@
        "19           0       0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -614,9 +624,7 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.metrics import classification_report\n",
+    "\n",
     "# Calculating the accuracy score\n",
     "acc_score = accuracy_score(y_test, predictions)\n",
     "print(f\"Accuracy Score : {acc_score}\")"
@@ -624,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -654,12 +662,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>Actual 0</td>\n",
+       "      <th>Actual 0</th>\n",
        "      <td>49</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>Actual 1</td>\n",
+       "      <th>Actual 1</th>\n",
        "      <td>39</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
@@ -691,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -716,14 +724,21 @@
     "print(\"Classification Report\")\n",
     "print(classification_report(y_test, predictions))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "mlenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "mlenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -735,7 +750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   },
   "mimetype": "text/x-python",
   "name": "python",
