--- a/Machine_Learning/17-10-1-oversampling/oversampling_CH.ipynb
+++ b/Machine_Learning/17-10-1-oversampling/oversampling_CH.ipynb
@@ -265,8 +265,8 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "y_pred = model.predict(X_test)\n",
-    "balanced_accuracy_score(y_test, y_pred)"
+    "brf_y_pred = model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, brf_y_pred)"
    ]
   },
   {
@@ -288,7 +288,7 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "confusion_matrix(y_test, y_pred)"
+    "confusion_matrix(y_test, brf_y_pred)"
    ]
   },
   {
@@ -312,7 +312,7 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "print(classification_report_imbalanced(y_test, y_pred))"
+    "print(classification_report_imbalanced(y_test, brf_y_pred))"
    ]
   },
   {
