Testing SQL db connect RDS 1.16

--- a/SQL/testing.ipynb
+++ b/SQL/testing.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import psycopg2\n",
-    "from sqlalchemy import create_engine, Table, MetaData\n",
+    "from sqlalchemy import create_engine, inspect, insert, update, select, Table, Column, Integer, String, MetaData\n",
     "from config import username, pw, port, dbName, host"
    ]
   },
@@ -19,6 +19,15 @@
    "outputs": [],
    "source": [
     "engine = create_engine(f\"postgresql+psycopg2://{username}:{pw}@{host}:5432/{dbName}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = engine.connect()"
    ]
   },
   {
