testing postgres with AWS Python wrapper 1.16

--- a/SQL/testing.ipynb
+++ b/SQL/testing.ipynb
@@ -32,6 +32,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aws_advanced_python_wrapper import AwsWrapperConnection\n",
+    "from psycopg2 import connect\n",
+    "from config import username, pw, port, dbName, host"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "awsconn = AwsWrapperConnection.connect(\n",
+    "        connect,\n",
+    "        f\"host={host} dbname={dbName} user={username} password={pw} plugins=failover wrapper_dialect=pg\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
