--- a/Viz/code/ch6-exercise-1.ipynb
+++ b/Viz/code/ch6-exercise-1.ipynb
@@ -272,9 +272,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dataviz",
+   "display_name": "3.11.8",
    "language": "python",
-   "name": "dataviz"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -286,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
